load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "executor",
    srcs = [
        "adapter.go",
        "admin.go",
        "admin_plugins.go",
        "admin_telemetry.go",
        "aggregate.go",
        "analyze.go",
        "analyze_col.go",
        "analyze_col_v2.go",
        "analyze_fast.go",
        "analyze_global_stats.go",
        "analyze_idx.go",
        "analyze_incremental.go",
        "analyze_utils.go",
        "analyze_worker.go",
        "apply_cache.go",
        "batch_checker.go",
        "batch_point_get.go",
        "bind.go",
        "brie.go",
        "builder.go",
        "change.go",
        "checksum.go",
        "compact_table.go",
        "compiler.go",
        "concurrent_map.go",
        "coprocessor.go",
        "cte.go",
        "cte_table_reader.go",
        "ddl.go",
        "delete.go",
        "distsql.go",
        "errors.go",
        "executor.go",
        "explain.go",
        "foreign_key.go",
        "grant.go",
        "hash_table.go",
        "index_advise.go",
        "index_lookup_hash_join.go",
        "index_lookup_join.go",
        "index_lookup_merge_join.go",
        "index_merge_reader.go",
        "infoschema_reader.go",
        "insert.go",
        "insert_common.go",
        "inspection_common.go",
        "inspection_profile.go",
        "inspection_result.go",
        "inspection_summary.go",
        "join.go",
        "joiner.go",
        "load_data.go",
        "load_stats.go",
        "lock_stats.go",
        "mem_reader.go",
        "memtable_reader.go",
        "merge_join.go",
        "metrics_reader.go",
        "mpp_gather.go",
        "opt_rule_blacklist.go",
        "parallel_apply.go",
        "partition_table.go",
        "pipelined_window.go",
        "plan_replayer.go",
        "point_get.go",
        "prepared.go",
        "projection.go",
        "reload_expr_pushdown_blacklist.go",
        "replace.go",
        "revoke.go",
        "sample.go",
        "select_into.go",
        "set.go",
        "set_config.go",
        "show.go",
        "show_placement.go",
        "show_stats.go",
        "shuffle.go",
        "simple.go",
        "slow_query.go",
        "sort.go",
        "split.go",
        "table_reader.go",
        "trace.go",
        "union_scan.go",
        "update.go",
        "utils.go",
        "window.go",
        "write.go",
    ],
    importpath = "github.com/pingcap/tidb/executor",
    visibility = ["//visibility:public"],
    deps = [
        "//bindinfo",
        "//br/pkg/glue",
        "//br/pkg/storage",
        "//br/pkg/task",
        "//config",
        "//ddl",
        "//ddl/label",
        "//ddl/placement",
        "//ddl/schematracker",
        "//distsql",
        "//domain",
        "//domain/infosync",
        "//errno",
        "//executor/aggfuncs",
        "//expression",
        "//expression/aggregation",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//metrics",
        "//parser",
        "//parser/ast",
        "//parser/auth",
        "//parser/charset",
        "//parser/format",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//parser/types",
        "//planner",
        "//planner/core",
        "//planner/util",
        "//plugin",
        "//privilege",
        "//privilege/privileges",
        "//session/txninfo",
        "//sessionctx",
        "//sessionctx/sessionstates",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//sessiontxn/staleread",
        "//statistics",
        "//statistics/handle",
        "//store/driver/backoff",
        "//store/driver/error",
        "//store/driver/txn",
        "//store/helper",
        "//table",
        "//table/tables",
        "//table/temptable",
        "//tablecodec",
        "//telemetry",
        "//tidb-binlog/node",
        "//types",
        "//types/parser_driver",
        "//util",
        "//util/admin",
        "//util/bitmap",
        "//util/breakpoint",
        "//util/channel",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/cteutil",
        "//util/dbterror",
        "//util/deadlockhistory",
        "//util/disk",
        "//util/etcd",
        "//util/execdetails",
        "//util/format",
        "//util/gcutil",
        "//util/hack",
        "//util/hint",
        "//util/keydecoder",
        "//util/kvcache",
        "//util/logutil",
        "//util/logutil/consistency",
        "//util/mathutil",
        "//util/memory",
        "//util/mvmap",
        "//util/password-validation",
        "//util/pdapi",
        "//util/plancodec",
        "//util/printer",
        "//util/ranger",
        "//util/resourcegrouptag",
        "//util/rowDecoder",
        "//util/rowcodec",
        "//util/sem",
        "//util/servermemorylimit",
        "//util/set",
        "//util/size",
        "//util/sqlexec",
        "//util/stmtsummary",
        "//util/stringutil",
        "//util/table-filter",
        "//util/timeutil",
        "//util/tls",
        "//util/topsql",
        "//util/topsql/state",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_gogo_protobuf//proto",
        "@com_github_ngaut_pools//:pools",
        "@com_github_opentracing_basictracer_go//:basictracer-go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/brpb",
        "@com_github_pingcap_kvproto//pkg/coprocessor",
        "@com_github_pingcap_kvproto//pkg/deadlock",
        "@com_github_pingcap_kvproto//pkg/diagnosticspb",
        "@com_github_pingcap_kvproto//pkg/encryptionpb",
        "@com_github_pingcap_kvproto//pkg/kvrpcpb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_kvproto//pkg/tikvpb",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_sysutil//:sysutil",
        "@com_github_pingcap_tipb//go-tipb",
        "@com_github_prometheus_client_golang//api",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_tikv_client_go_v2//error",
        "@com_github_tikv_client_go_v2//kv",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_client_go_v2//tikvrpc",
        "@com_github_tikv_client_go_v2//txnkv",
        "@com_github_tikv_client_go_v2//txnkv/txnlock",
        "@com_github_tikv_client_go_v2//txnkv/txnsnapshot",
        "@com_github_tikv_client_go_v2//util",
        "@com_github_tikv_pd_client//:client",
        "@com_github_twmb_murmur3//:murmur3",
        "@com_sourcegraph_sourcegraph_appdash//:appdash",
        "@com_sourcegraph_sourcegraph_appdash//opentracing",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//status",
        "@org_golang_x_exp//slices",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "executor_test",
    timeout = "moderate",
    srcs = [
        "adapter_test.go",
        "admin_test.go",
        "aggregate_test.go",
        "analyze_test.go",
        "apply_cache_test.go",
        "batch_point_get_test.go",
        "benchmark_test.go",
        "brie_test.go",
        "charset_test.go",
        "chunk_size_control_test.go",
        "cluster_table_test.go",
        "collation_test.go",
        "compact_table_test.go",
        "concurrent_map_test.go",
        "copr_cache_test.go",
        "cte_test.go",
        "ddl_test.go",
        "delete_test.go",
        "distsql_test.go",
        "executor_failpoint_test.go",
        "executor_pkg_test.go",
        "executor_required_rows_test.go",
        "executor_test.go",
        "executor_txn_test.go",
        "explain_test.go",
        "explain_unit_test.go",
        "explainfor_test.go",
        "grant_test.go",
        "hash_table_test.go",
        "historical_stats_test.go",
        "hot_regions_history_table_test.go",
        "index_advise_test.go",
        "index_lookup_join_test.go",
        "index_lookup_merge_join_test.go",
        "index_merge_reader_test.go",
        "infoschema_cluster_table_test.go",
        "infoschema_reader_test.go",
        "insert_test.go",
        "inspection_common_test.go",
        "inspection_result_test.go",
        "inspection_summary_test.go",
        "join_pkg_test.go",
        "join_test.go",
        "joiner_test.go",
        "main_test.go",
        "memory_test.go",
        "memtable_reader_test.go",
        "merge_join_test.go",
        "metrics_reader_test.go",
        "parallel_apply_test.go",
        "partition_table_test.go",
        "pkg_test.go",
        "point_get_test.go",
        "prepared_test.go",
        "recover_test.go",
        "resource_tag_test.go",
        "revoke_test.go",
        "rowid_test.go",
        "sample_test.go",
        "select_into_test.go",
        "set_test.go",
        "show_placement_labels_test.go",
        "show_placement_test.go",
        "show_stats_test.go",
        "shuffle_test.go",
        "simple_test.go",
        "slow_query_sql_test.go",
        "slow_query_test.go",
        "sort_test.go",
        "split_test.go",
        "stale_txn_test.go",
        "statement_context_test.go",
        "table_readers_required_rows_test.go",
        "temporary_table_test.go",
        "tikv_regions_peers_table_test.go",
        "trace_test.go",
        "union_scan_test.go",
        "update_test.go",
        "utils_test.go",
        "window_test.go",
        "write_concurrent_test.go",
        "write_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":executor"],
    flaky = True,
    shard_count = 50,
    deps = [
        "//config",
        "//ddl",
        "//ddl/placement",
        "//ddl/schematracker",
        "//ddl/testutil",
        "//ddl/util",
        "//distsql",
        "//domain",
        "//domain/infosync",
        "//errno",
        "//executor/aggfuncs",
        "//expression",
        "//expression/aggregation",
        "//infoschema",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//metrics",
        "//parser",
        "//parser/ast",
        "//parser/auth",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//planner",
        "//planner/core",
        "//planner/property",
        "//planner/util",
        "//server",
        "//session",
        "//sessionctx",
        "//sessionctx/binloginfo",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//sessiontxn/staleread",
        "//statistics",
        "//statistics/handle",
        "//store/copr",
        "//store/driver/error",
        "//store/helper",
        "//store/mockstore",
        "//store/mockstore/unistore",
        "//table",
        "//table/tables",
        "//tablecodec",
        "//testkit",
        "//testkit/external",
        "//testkit/testdata",
        "//testkit/testmain",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//util",
        "//util/benchdaily",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/deadlockhistory",
        "//util/disk",
        "//util/execdetails",
        "//util/gcutil",
        "//util/hack",
        "//util/logutil",
        "//util/logutil/consistency",
        "//util/mathutil",
        "//util/memory",
        "//util/mock",
        "//util/paging",
        "//util/pdapi",
        "//util/plancodec",
        "//util/ranger",
        "//util/rowcodec",
        "//util/set",
        "//util/sqlexec",
        "//util/stringutil",
        "//util/tableutil",
        "//util/timeutil",
        "//util/topsql/state",
        "@com_github_golang_protobuf//proto",
        "@com_github_gorilla_mux//:mux",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_fn//:fn",
        "@com_github_pingcap_kvproto//pkg/diagnosticspb",
        "@com_github_pingcap_kvproto//pkg/kvrpcpb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_sysutil//:sysutil",
        "@com_github_pingcap_tipb//go-binlog",
        "@com_github_pingcap_tipb//go-tipb",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//testutils",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_client_go_v2//tikvrpc",
        "@com_github_tikv_client_go_v2//util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_x_exp//slices",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_goleak//:goleak",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
