load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "expression",
    srcs = [
        "builtin.go",
        "builtin_arithmetic.go",
        "builtin_arithmetic_vec.go",
        "builtin_cast.go",
        "builtin_cast_vec.go",
        "builtin_compare.go",
        "builtin_compare_vec.go",
        "builtin_compare_vec_generated.go",
        "builtin_control.go",
        "builtin_control_vec_generated.go",
        "builtin_convert_charset.go",
        "builtin_encryption.go",
        "builtin_encryption_vec.go",
        "builtin_info.go",
        "builtin_info_vec.go",
        "builtin_json.go",
        "builtin_json_vec.go",
        "builtin_like.go",
        "builtin_like_vec.go",
        "builtin_math.go",
        "builtin_math_vec.go",
        "builtin_miscellaneous.go",
        "builtin_miscellaneous_vec.go",
        "builtin_op.go",
        "builtin_op_vec.go",
        "builtin_other.go",
        "builtin_other_vec.go",
        "builtin_other_vec_generated.go",
        "builtin_regexp.go",
        "builtin_regexp_util.go",
        "builtin_string.go",
        "builtin_string_vec.go",
        "builtin_string_vec_generated.go",
        "builtin_time.go",
        "builtin_time_vec.go",
        "builtin_time_vec_generated.go",
        "builtin_vectorized.go",
        "chunk_executor.go",
        "collation.go",
        "column.go",
        "constant.go",
        "constant_fold.go",
        "constant_propagation.go",
        "distsql_builtin.go",
        "errors.go",
        "evaluator.go",
        "explain.go",
        "expr_to_pb.go",
        "expression.go",
        "extension.go",
        "function_traits.go",
        "helper.go",
        "partition_pruner.go",
        "scalar_function.go",
        "schema.go",
        "simple_rewriter.go",
        "util.go",
        "vectorized.go",
    ],
    importpath = "github.com/pingcap/tidb/expression",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//errno",
        "//extension",
        "//kv",
        "//privilege",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//types",
        "//types/parser_driver",
        "//util",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/disjointset",
        "//util/encrypt",
        "//util/generatedexpr",
        "//util/hack",
        "//util/logutil",
        "//util/mathutil",
        "//util/mock",
        "//util/parser",
        "//util/plancodec",
        "//util/printer",
        "//util/sem",
        "//util/set",
        "//util/size",
        "//util/sqlexec",
        "//util/stringutil",
        "//util/vitess",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/opcode",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tidb/parser/types",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/go.uber.org/atomic",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/exp/slices",
        "//vendor/golang.org/x/tools/container/intsets",
    ],
)

go_test(
    name = "expression_test",
    timeout = "short",
    srcs = [
        "bench_test.go",
        "builtin_arithmetic_test.go",
        "builtin_arithmetic_vec_test.go",
        "builtin_cast_bench_test.go",
        "builtin_cast_test.go",
        "builtin_cast_vec_test.go",
        "builtin_compare_test.go",
        "builtin_compare_vec_generated_test.go",
        "builtin_compare_vec_test.go",
        "builtin_control_test.go",
        "builtin_control_vec_generated_test.go",
        "builtin_encryption_test.go",
        "builtin_encryption_vec_test.go",
        "builtin_info_test.go",
        "builtin_info_vec_test.go",
        "builtin_json_test.go",
        "builtin_json_vec_test.go",
        "builtin_like_test.go",
        "builtin_like_vec_test.go",
        "builtin_math_test.go",
        "builtin_math_vec_test.go",
        "builtin_miscellaneous_test.go",
        "builtin_miscellaneous_vec_test.go",
        "builtin_op_test.go",
        "builtin_op_vec_test.go",
        "builtin_other_test.go",
        "builtin_other_vec_generated_test.go",
        "builtin_other_vec_test.go",
        "builtin_regexp_test.go",
        "builtin_regexp_vec_const_test.go",
        "builtin_string_test.go",
        "builtin_string_vec_generated_test.go",
        "builtin_string_vec_test.go",
        "builtin_test.go",
        "builtin_time_test.go",
        "builtin_time_vec_generated_test.go",
        "builtin_time_vec_test.go",
        "builtin_vectorized_test.go",
        "collation_test.go",
        "column_test.go",
        "constant_fold_test.go",
        "constant_propagation_test.go",
        "constant_test.go",
        "distsql_builtin_test.go",
        "evaluator_test.go",
        "expr_to_pb_test.go",
        "expression_test.go",
        "flag_simplify_test.go",
        "function_traits_test.go",
        "helper_test.go",
        "integration_serial_test.go",
        "integration_test.go",
        "main_test.go",
        "scalar_function_test.go",
        "schema_test.go",
        "typeinfer_test.go",
        "util_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":expression"],
    flaky = True,
    shard_count = 50,
    deps = [
        "//config",
        "//domain",
        "//errno",
        "//kv",
        "//planner/core",
        "//session",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//table",
        "//tablecodec",
        "//testkit",
        "//testkit/testdata",
        "//testkit/testmain",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//types/parser_driver",
        "//util",
        "//util/benchdaily",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/hack",
        "//util/mathutil",
        "//util/mock",
        "//util/printer",
        "//util/sem",
        "//util/sqlexec",
        "//util/timeutil",
        "//util/versioninfo",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/go.uber.org/goleak",
    ],
)
